# bet_arbitrage

./: config.demo.yaml  config.yaml  pyproject.toml
src/: alerts.py  arbitrage.py  main.py  models.py  normalizer.py  odds_utils.py  state.py
src/scrapers/: base.py  demo.py  draftkings.py  fanduel.py
tests/: test_arbitrage.py  test_normalizer.py  test_odds_utils.py
