[project]
name = "arb-bot"
version = "0.1.0"
description = "Sports betting arbitrage scanner — alerts only (Phase 1)"
requires-python = ">=3.10"
dependencies = [
    "patchright>=1.49.0",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
